--- a/src/app/components/LeftMenu/PlaceCardList/Card/index.css
+++ b/src/app/components/LeftMenu/PlaceCardList/Card/index.css
@@ -1,14 +1,14 @@
 .swiper-container {
     width: 100%;
     height: 100%;
-    margin-top: 10px;
+    /*margin-top: 10px;*/
 }
 
 .swiper-slide {
   text-align: center;
   font-size: 18px;
   background: #fff;
-  width: 145px !important;
+  /*width: 145px ;*/
   /* Center slide text vertically */
   display: -webkit-box;
   display: -ms-flexbox;
@@ -31,9 +31,9 @@
   object-fit: cover;
 }
 
-.swiper-slide:first-child {
+/* .swiper-slide:first-child {
     margin-left: 15px;
-}
+} */
 .swiper-pagination-bullet-active {
     background: #FF3061;
 }
